--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,9 @@ spring.jpa.show-sql=true
 eureka.client.enabled=false
 
 spring.main.allow-circular-references = true
+
+#key depends on JWT Algoritm
+app.jwt.secret=RandomSecretKey1234567890!RandomSecretKey1234567890!RandomSecretKey1234567890!RandomSecretKey1234567890!
+
+#1 Day
+app.jwt.expiration-in-ms=86400000
