Gateway endpoints added for other microservices

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ app.jwt.expiration-in-ms=86400000
 
 service.security-secure-key-username=randomSecureKeyUsername!
 service.security-secure-key-password=randomSecureKeyPassword!
+
+course.service.url=http://localhost:3333
+purchase.service.url=http://localhost:4444
